Fix: overflow bug ***

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body,
 div {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  /* overflow: hidden !important; */
   font-family: 'wavehaus', sans-serif;
 }
 
@@ -71,4 +71,28 @@ hr {
   margin: 0;
   padding: 0;
   border: none !important;
+}
+
+.ant-table-thead > tr > th,
+.ant-table-tbody > tr > td,
+.ant-table tfoot > tr > th,
+.ant-table tfoot > tr > td {
+  position: relative;
+  padding: 8px 16px !important;
+  overflow-wrap: break-word;
+}
+
+.ant-table-thead tr th {
+  background: #3e464e !important;
+  border-bottom: none !important;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fff !important;
+}
+
+.ant-table-tbody > tr {
+  font-size: 1rem;
+  padding: 0 !important;
+  color: #666666;
+  box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.2);
 }
